<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.example.tqtruongcnpmct2.widget.AspectRatioNoRadiusImageView
                    android:id="@+id/image_food"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:aspectRatio="0.56"
                    app:aspectRatioEnabled="true"
                    app:dominantMeasurement="Width" />

                <TextView
                    android:id="@+id/tv_sale_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/define_dimen_10"
                    android:background="@color/colorPrimary"
                    android:padding="@dimen/define_dimen_6"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_xsmall"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/define_dimen_10">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_food_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/app_name"
                        android:textSize="@dimen/text_size_normal"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/tv_codition"
                        android:layout_marginLeft="8dp"
                        android:layout_toEndOf="@id/tv_food_name"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:text="(Hết Đơn)"
                        android:textSize="@dimen/define_dimen_12"
                        android:textStyle="bold" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/define_dimen_5"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/price_label"
                        android:textSize="@dimen/text_size_small" />

                    <TextView
                        android:id="@+id/tv_price_sale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/define_dimen_2"
                        android:textColor="@color/colorPrimary"
                        android:text="100 000 VNĐ"
                        android:layout_marginStart="@dimen/define_dimen_5"
                        android:textSize="@dimen/text_size_small"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:text="100 000 VNĐ"
                        android:layout_marginStart="@dimen/define_dimen_5"
                        android:textSize="@dimen/text_size_small" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/define_dimen_20"
                    android:layout_marginBottom="@dimen/define_dimen_20"
                    android:background="@color/colorPrimaryDark"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/description_label"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/tv_food_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/define_dimen_5"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/tv_more_image_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/more_image_label"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/define_dimen_20"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_size_small" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_images"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="-10dp"
                    android:nestedScrollingEnabled="false"
                    android:focusable="false"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_add_to_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/define_dimen_10"
                android:layout_marginTop="@dimen/define_dimen_10"
                android:layout_marginEnd="@dimen/define_dimen_10"
                android:layout_marginBottom="@dimen/define_dimen_20"
                android:background="@drawable/bg_green_shape_corner_6"
                android:gravity="center"
                android:padding="@dimen/define_dimen_12"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
